--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
+    "export": "nuxt export",
     "serve": "nuxt serve"
   },
   "dependencies": {
